@@ -19,6 +19,8 @@ ver. 0.8.3 (2008/??/??) - stable
 - Fixed "fail2ban-client get <jail> logpath". Bug #1916986.
 - Changed some log levels.
 - Added gssftpd filter. Thanks to Kevin Zembower.
+- Added "Day/Month/Year Hour:Minute:Second" date template.
+  Thanks to Dennis Winter.
 
 ver. 0.8.2 (2008/03/06) - stable
 ----------
